3+ list dimensions fix but list initialization still not working